@@ -612,20 +612,6 @@
 #define ENABLE_WEB_ARCHIVE 1
 #endif
 
-#if PLATFORM(ANDROID)
-#define WTF_USE_PTHREADS 1
-#define USE_SYSTEM_MALLOC 1
-#define ENABLE_JAVA_BRIDGE 1
-#define LOG_DISABLED 1
-/* Prevents Webkit from drawing the caret in textfields and textareas
-   This prevents unnecessary invals. */
-#define ENABLE_TEXT_CARET 1
-#define ENABLE_JAVASCRIPT_DEBUGGER 0
-#if !defined(ENABLE_JIT) && !ENABLE(ANDROID_JSC_JIT)
-#define ENABLE_JIT 0
-#endif
-#endif
-
 #if PLATFORM(WIN) && !OS(WINCE)
 #define WTF_USE_CF 1
 #define WTF_USE_PTHREADS 0
