@@ -1,5 +1,14 @@
 2011-08-23  Steve Block  <steveblock@google.com>
 
+        Remove last occurrences of PLATFORM(ANDROID)
+        https://bugs.webkit.org/show_bug.cgi?id=66763
+
+        Reviewed by Tony Gentilcore.
+
+        * wtf/Platform.h:
+
+2011-08-23  Steve Block  <steveblock@google.com>
+
         Remove all mention of removed Android files from build scripts
         https://bugs.webkit.org/show_bug.cgi?id=66755
 
